# Server

./: .gitignore  CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp
client/objects/: client.cpp  client.hpp
objects/: http-server.cpp  http-server.hpp
server/: CMakeLists.txt
server/objects/: http-server.cpp  http-server.hpp
